--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,6 +12,12 @@
 ul {
     list-style: none;
     margin: 0;
+    padding: 0;
+
+    li {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 img {
